[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stern_plot"
version = "2025.3"
description = "Plotting library for hstern.ca. Built on plotly"
authors = [
    { name = "Henry Stern" },
]
license = { file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13, <4"
dependencies = [
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [ "E4", "E7", "E9", "F", "W", "C901", "N", "A", "PD", "D100", "D101", "D102", "D103", "D104", "D105" ]
ignore = ["PD901"]

[tool.ruff.lint.isort]
known-first-party = ["stern_plot"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
]
